<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources>
    <string name="app_name">DropEx</string>
    <string name="verify">Verify</string>
    <string name="theme_name_hint">Theme name…</string>

    <string name="onboarding_1_heading">Top Rated Riders</string>
    <string name="onboarding_1_body">we always send our highest_rated rider \n that\'s close to you.ensuring a five-star \n courier service</string>
    <string name="onboarding_2_heading">Easy Tracking</string>
    <string name="onboarding_2_body">Tracking has never been so easy!\nCall,text,track your delivery Partner\nWith our user friendly interface</string>
    <string name="onboarding_3_heading">Your Shipment Service</string>
    <string name="onboarding_3_body">Pack and Ship, anything, anywhere \n From the convenience of \n your home or office</string>


    <string name="demo_title">Drop express</string>
    <string name="demo_content">I dont know what it is about</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getStarted">GET STARTED</string>
    <string name="nav_user_desc">profile photo</string>
    <string name="nav_username">full name</string>
    <string name="label_view_profile">VIEW PROFILE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="continue_text">Continue</string>
    <string name="menu_home">HOME</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="action_settings">action</string>
    <string name="menu_gallery">galler</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_profile">Profile</string>

    <string name="fname_label">First name</string>
    <string name="surname_label">Surname</string>
    <string name="phone_label">Phone number</string>
    <string name="email_label">Email</string>
    <string name="verified_label">Verified</string>
    <string name="save">Save</string>


    <string name="access_token" translatable="false">sk.eyJ1IjoibS1ndWRsZSIsImEiOiJja3Jzd3BtYXQzZTUxMzFwZW5lOWpsZnRjIn0.QIdA-7eQZBC6G_K54vutQA</string>
    <string name="dropexpress1" translatable="false">sk.eyJ1IjoibS1ndWRsZSIsImEiOiJja3NobGcwNHkwMWNsMm9uY2lxOXhpeGVlIn0.Qo2hlm6msn9s-HLrx2fKpw</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didnt grant location permissions.</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="start_from_location">Start route from current location</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>

    <string name="job_id">JobId</string>
    <string name="vehicle_id">VehicleId</string>
    <string name="search_input">Search…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="unit_type_key" translatable="false">unit_type</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="start_from_location_key" translatable="false">start_from_location</string>
    <string name="language_key" translatable="false">language</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="first_start_dialog_key" translatable="false">first_start_dialog</string>
    <string name="first_navigation_dialog_key" translatable="false">first_navigation_dialog</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>

    <string name="error_route_not_available">Current route is not available</string>
    <string name="error_select_longer_route">Please select a longer route</string>
    <string name="error_valid_route_not_found">Valid route not found.</string>
    <string name="error_calculating_route">There was an error calculating the route</string>
    <string name="error_fetching_solution">There was an error fetching the solution</string>
    <string name="error_fetching_geocoding">There was an error fetching results from the geocoding API</string>
    <string name="error_vehicle_not_found">Vehicle not found</string>
    <string name="error_location_not_found">Location not found</string>
    <string name="error_geocoding_no_location">No location found</string>
    <string name="error_too_many_waypoints">A route cannot have more than 25 waypoints</string>
    <string name="error_not_enough_waypoints">A route needs at least 2 waypoints</string>
    <string name="error_no_browser_installed">No browser installed</string>
    <string name="error_too_far_from_start_title">Too far from start</string>
    <string name="error_too_far_from_start_message">Would you like to recalculate the route from your current location?</string>
    <string name="explanation_long_press_waypoint">Long press map to place waypoint</string>
    <string name="launch_navigation">Launch Navigation</string>
    <string name="reset_route">Reset Route</string>
    <string name="fetch_solution">Fetch Solution</string>
    <string name="geocoding_search">Search</string>
    <string name="help_message_title">Getting Started</string>
    <string name="legal_title">Legal Notice</string>
    <string name="agree">I agree</string>
    <string name="github">Contribute on Github</string>

    <string name="open_gh_maps">Open Route from GH Maps</string>
    <string name="open_vrp_solution">Open VRP Solution</string>
    =======
    <string name="fulfil_your_deliveries_text">Fulfil your deliveries hassle-free</string>
    <string name="welcome_user_text">Welcome John Doe</string>
    <string name="user_avatar_image">User avatar image</string>
    <string name="package_delivered_safely_header">Get your package delivered safely with us</string>
    <string name="personal_and_business_subHeader">For all your personal and business needs</string>
    <string name="receive_package_icon_img_description">Receive package icon</string>
    <string name="receive_textView">Receive</string>
    <string name="deliver_package_icon_img_description">Deliver package icon</string>
    <string name="deliver_textView">Deliver</string>
    <string name="background_circle_banner">background_circle_banner</string>
    <string name="banner_illustration">banner_illustration</string>
    <string name="discount_textView">15% Discount</string>
    <string name="discount_date_textView">1 July - 20 July</string>
    <string name="send_package">Send package(s)</string>
    <string name="explain_send_package">Deliver Items such as gifts,order,documents etc</string>
    <string name="label_cta" />
    <string name="job_information" />
    <string name="shipping_information" />
    <string name="number_of_packages">number of packages</string>
    <string name="next">Next</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="delivery_address">delivery address</string>
    <string name="note">Delivery Note</string>
    <string name="recipient_phone_number">0712345678</string>
    <string name="delivery_info">Who is receiving the package?</string>
    <string name="name">Name</string>
    <string name="choice_small">Small</string>
    <string name="choice_medium">Medium</string>
    <string name="choice_large">Large</string>
    <string name="menu_jobs">Jobs</string>
    <string name="pickup_address">Pickup address</string>
    <string name="mot_information">Means Of Transport</string>
    <string name="delete">Delete</string>
    <string name="label_job">Job</string>
    <string name="saveAndEstimate">Save and estimate price</string>
    <string name="tracking_code">Tracking Code</string>
    <string name="explain_receive_package">Track the location of your parcel and connect to your deliverer</string>
    <string name="recieve_package">Recieve a package</string>
    <string name="receive_package">Receive a package</string>
    <string name="track">Track</string>
    <string name="order">Deliver or Get a delivery</string>

</resources>
