<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reply_blue_700">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="42dp"
        android:text="@string/package_delivered_safely_header"
        android:textColor="@color/reply_white_50"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subHeaderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_and_business_subHeader"
        android:textColor="@color/reply_white_50"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/headerTextView"
        app:layout_constraintStart_toStartOf="@+id/headerTextView"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="166dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/background_bottom_landing_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_small_card_white">

                    <ImageView
                        android:id="@+id/receiveImageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="25dp"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/box"
                        android:contentDescription="@string/receive_package_icon_img_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/receiveTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receive_textView"
                    android:textAlignment="center"
                    android:textColor="@color/reply_black_800"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_small_card_white">

                    <ImageView
                        android:id="@+id/deliverImageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="25dp"
                        android:layout_marginTop="18dp"
                        android:background="@drawable/delivery_man"
                        android:contentDescription="@string/deliver_package_icon_img_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/deliverTxtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver_textView"
                    android:textAlignment="center"
                    android:textColor="@color/reply_black_800"
                    android:textSize="18sp" />

            </LinearLayout>


        </TableRow>

        <View style="@style/Divider"/>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_margin="32dp"
        android:background="@drawable/banner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_circle_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle_white" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/banner_illustration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banner_img1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/discount_textView"
            android:textSize="26sp"
            android:textColor="@color/reply_white_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/discount_date_textView"
            android:textColor="@color/reply_white_50"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>